[package]
name = "image-dwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_dwt"
path = "src/main.rs"

[dependencies]
image = "0.25.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
tiff = "0.9.1"
