[package]
name = "image-dwt"
version = "0.4.1"
edition = "2021"
authors = ["Anshul Sanghi <anshul@anshulsanghi.tech>"]
description = "An implementation of the À Trous Discrete Wavelet Transform for images"
homepage = "https://github.com/anshap1719/image-dwt"
repository = "https://github.com/anshap1719/image-dwt"
keywords = ["image", "wavelet", "multiscale", "analysis", "atrous"]
categories = ["multimedia"]
license = "Apache-2.0"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "image_dwt"
path = "src/main.rs"

[dependencies]
image = { version = "0.25.0", features = ["tiff"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
convolve-image = { version = "0.4.0", features = ["ndarray", "image"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lints.clippy]
# Clippy lint groups
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
complexity = { level = "deny", priority = 0 }
perf = { level = "deny", priority = 0 }
style = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }

# Overrides
too_many_lines = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }
get_unwrap = { level = "deny", priority = 1 }
fallible_impl_from = { level = "deny", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }